Bug 1615142 - Fix triple-click selection on pre-formatted text. r=mats a=pascalc

We need to check for terminal new-lines on ourselves before looking at our next
sibling frame.

Differential Revision: https://phabricator.services.mozilla.com/D62766