layout/generic/nsFrame.cpp
@@ -183,8 +183,8 @@ struct nsBoxLayoutMetrics {
 };
 
 struct nsContentAndOffset {
-  nsIContent* mContent;
-  int32_t mOffset;
+  nsIContent* mContent = nullptr;
+  int32_t mOffset = 0;
 };
 
 // Some Misc #defines
@@ -8431,21 +8431,39 @@ nsIFrame::CaretPosition nsIFrame::GetExtremeCaretPosition(bool aStart) {
   return result;
 }
 
+// If this is a preformatted text frame, see if it ends with a newline
+static nsContentAndOffset FindLineBreakInText(nsIFrame* aFrame,
+                                              nsDirection aDirection) {
+  nsContentAndOffset result;
+
+  if (aFrame->IsGeneratedContentFrame() ||
+      !aFrame->HasSignificantTerminalNewline()) {
+    return result;
+  }
+
+  int32_t startOffset, endOffset;
+  aFrame->GetOffsets(startOffset, endOffset);
+  result.mContent = aFrame->GetContent();
+  result.mOffset = endOffset - (aDirection == eDirPrevious ? 0 : 1);
+  return result;
+}
+
 // Find the first (or last) descendant of the given frame
 // which is either a block-level frame or a BRFrame, or some other kind of break
 // which stops the line.
 static nsContentAndOffset FindLineBreakingFrame(nsIFrame* aFrame,
                                                 nsDirection aDirection) {
   nsContentAndOffset result;
-  result.mContent = nullptr;
-  result.mOffset = 0;
 
-  if (aFrame->IsGeneratedContentFrame()) return result;
+  if (aFrame->IsGeneratedContentFrame()) {
+    return result;
+  }
 
   // Treat form controls as inline leaves
   // XXX we really need a way to determine whether a frame is inline-level
-  nsIFormControlFrame* fcf = do_QueryFrame(aFrame);
-  if (fcf) return result;
+  if (nsIFormControlFrame* fcf = do_QueryFrame(aFrame)) {
+    return result;
+  }
 
   // Check the frame itself
   // Fall through block-in-inline split frames because their mContent is
@@ -8467,12 +8485,8 @@ static nsContentAndOffset FindLineBreakingFrame(nsIFrame* aFrame,
     return result;
   }
 
-  // If this is a preformatted text frame, see if it ends with a newline
-  if (aFrame->HasSignificantTerminalNewline()) {
-    int32_t startOffset, endOffset;
-    aFrame->GetOffsets(startOffset, endOffset);
-    result.mContent = aFrame->GetContent();
-    result.mOffset = endOffset - (aDirection == eDirPrevious ? 0 : 1);
+  result = FindLineBreakInText(aFrame, aDirection);
+  if (result.mContent) {
     return result;
   }
 
@@ -8540,6 +8554,10 @@ nsresult nsIFrame::PeekOffsetParagraph(nsPeekOffsetStruct* aPos) {
         reachedBlockAncestor = true;
         break;
       }
+
+      // Try to find our own line-break before looking at our siblings.
+      blockFrameOrBR = FindLineBreakInText(frame, eDirNext);
+
       nsIFrame* sibling = frame->GetNextSibling();
       while (sibling && !blockFrameOrBR.mContent) {
         blockFrameOrBR = FindLineBreakingFrame(sibling, eDirNext);
